--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "sit725-2024-t1-prac5",
   "version": "1.0.0",
-  "description": "prac 5",
+  "description": "prac 6",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --reporter spec",
     "start": "node servermangodb.js"
   },
   "repository": {
